--- a/mine/index.html
+++ b/mine/index.html
@@ -11,13 +11,32 @@
       border-collapse: collapse;
     }
     td {
-      border: 1px solid black;
+      border: 1px solid #bbb;
       width: 20px;
       height: 20px;
+      background: #222;
+      text-align: center;
+      
+    }
+    td.opened {
+      background: white;
+    }
+    td.flag {
+      background: red;
+    }
+    td.question{
+      background: orange;
     }
   </style>
 </head>
 
+<!-- let code = {
+  openedBlank: -1,
+  question: -2,
+  flag: -3,
+  mine: 1,
+  normal: 0
+}; -->
 <body>
   <input id="hor" type="number" placeholder="가로" value="10"/>
   <input id="ver" type="number" placeholder="세로" value="10"/>
@@ -31,6 +50,7 @@
     </thead>
     <tbody></tbody>
   </table>
+  <div id="result"></div>
   <script src="./mine.js"></script>
 </body>
 
