짝 맞추기 게임

--- a/pairCard/index.html
+++ b/pairCard/index.html
@@ -52,6 +52,7 @@
 <!--        <div class="card-back">뒤</div>-->
 <!--    </div>-->
 <!--</div>-->
+<div id="wrapper"></div>
 <script src="pairCard.js"></script>
 </body>
 </html>
