--- a/jsStone/index.html
+++ b/jsStone/index.html
@@ -9,7 +9,9 @@
       vertical-align: top;
       margin-right: 50px;
     }
-
+    .turn {
+      border: 1px solid black;
+    }
     #rival {
       vertical-align: bottom;
     }
@@ -17,7 +19,8 @@
     #my-deck, #rival-deck {
       display: inline-block;
       vertical-align: top;
-      width: 200px;
+      width: 300px;
+      background: silver;
     }
 
     #rival-deck, #rival-hero, #rival-cards, #my-cards, #my-deck, #my-hero {
@@ -31,6 +34,7 @@
       position: relative;
       border: 1px solid black;
       margin-bottom: 10px;
+      background: white;
     }
 
     .card-name {
@@ -68,92 +72,45 @@
       background-color: blue;
       color: white;
     }
+    .card-hidden {
+      display: none;
+    }
+    #turn-button{
+      float: right;
+      position: relative;
+      top: -23px;
+    }
   </style>
 </head>
 <body>
 <div id="rival">
-  <div id="rival-cost">코스트: <span>10</span></div>
-  <div id="rival-hero">
-    <div class="card">
-      <div class="card-name">적 영웅</div>
-      <div class="card-att">5</div>
-      <div class="card-hp">10</div>
-    </div>
-  </div>
-  <div id="rival-cards">
-
-  </div>
+  <div>코스트: <span id="rival-cost">10</span>/<span>10</span></div>
+  <div id="rival-hero"></div>
+  <div id="rival-cards"></div>
 </div>
 <div id="rival-deck">
   <div>덱</div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
 </div>
 <hr/>
-<div id="my">
-  <div id="my-cards">
-
-  </div>
+<button id="turn-button">턴 넘기기</button>
+<div id="my" class="turn">
+  <div id="my-cards"></div>
 
   <div id="my-hero">
     <!--    내 영웅-->
-    <div class="card">
-      <div class="card-name">내 영웅</div>
-      <div class="card-att">5</div>
-      <div class="card-hp">10</div>
-    </div>
+
   </div>
-  <div id="my-cost">코스트: <span>10</span></div>
+  <div>코스트: <span id="my-cost">10</span>/<span>10</span></div>
 </div>
 <div id="my-deck">
   <div>덱</div>
+
+</div>
+<div class="card-hidden">
   <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
-  </div>
-  <div class="card">
-    <div class="card-cost">2</div>
-    <div class="card-att">5</div>
-    <div class="card-hp">10</div>
+    <div class="card-cost"></div>
+    <div class="card-att"></div>
+    <div class="card-hp"></div>
   </div>
 </div>
 <script src="jsStone.js"></script>
