--- a/jsStone/index.html
+++ b/jsStone/index.html
@@ -80,6 +80,12 @@
       position: relative;
       top: -23px;
     }
+    .card-selected {
+      border: 2px solid red;
+    }
+    .card-turnOver {
+      background:gray;
+    }
   </style>
 </head>
 <body>
